--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.12.7",
+    "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.6.0",
     "workbox-broadcast-update": "^6.6.0",
