--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@lordicon/react": "^1.6.0",
     "@reduxjs/toolkit": "^1.8.1",
+    "@tanstack/react-query": "^5.40.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,7 +13,7 @@
     "lottie-web": "^5.12.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-redux": "^9.1.2",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
     "recharts": "^2.12.7",
